--- a/SergioTenza.Blazor.Wasm/SergioTenza.Wasm/Layout/MainLayout.razor.css
+++ b/SergioTenza.Blazor.Wasm/SergioTenza.Wasm/Layout/MainLayout.razor.css
@@ -9,7 +9,7 @@ main {
 }
 
 .sidebar {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+    background-image: linear-gradient(180deg, #512BD4 0%, #6A1B9A 70%);
 }
 
 .top-row {
@@ -19,12 +19,15 @@ main {
     height: 3.5rem;
     display: flex;
     align-items: center;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
     .top-row ::deep a, .top-row ::deep .btn-link {
         white-space: nowrap;
         margin-left: 1.5rem;
         text-decoration: none;
+        color: #512BD4;
+        font-weight: 500;
     }
 
     .top-row ::deep a:hover, .top-row ::deep .btn-link:hover {
