--- a/SergioTenza.Blazor.Wasm/SergioTenza.Wasm/Layout/NavMenu.razor
+++ b/SergioTenza.Blazor.Wasm/SergioTenza.Wasm/Layout/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">SergioTenza.Wasm</a>
+        <a class="navbar-brand" href="">TNZ Servicios</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -11,18 +11,33 @@
     <nav class="nav flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
+                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Inicio
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
-            </NavLink>
+            <a class="nav-link" href="#servicios">
+                <span class="bi bi-gear-fill-nav-menu" aria-hidden="true"></span> Servicios
+            </a>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
-            </NavLink>
+            <a class="nav-link" href="#why-blazor">
+                <span class="bi bi-lightning-fill-nav-menu" aria-hidden="true"></span> ¿Por qué Blazor?
+            </a>
+        </div>
+        <div class="nav-item px-3">
+            <a class="nav-link" href="#vision">
+                <span class="bi bi-eye-fill-nav-menu" aria-hidden="true"></span> Nuestra Visión
+            </a>
+        </div>
+        <div class="nav-item px-3">
+            <a class="nav-link" href="#why-us">
+                <span class="bi bi-people-fill-nav-menu" aria-hidden="true"></span> ¿Por qué nosotros?
+            </a>
+        </div>
+        <div class="nav-item px-3">
+            <a class="nav-link" href="#contact">
+                <span class="bi bi-envelope-fill-nav-menu" aria-hidden="true"></span> Contacto
+            </a>
         </div>
     </nav>
 </div>
